fix: style that renders ugly on safari

--- a/_common/css/article.css
+++ b/_common/css/article.css
@@ -1,7 +1,9 @@
 section h2:not(:first-child)  {
   margin-top: 2em;
+  font-weight: 500;
 }
 
 section h3 {
   margin-top: 1.7em;
+  font-weight: 500;
 }
