--- a/_common/css/style.css
+++ b/_common/css/style.css
@@ -38,7 +38,7 @@
 }
 
 strong {
-  font-weight: 700;
+  font-weight: 500;
 }
 
 html {
